# internal/domain/models.go
@@ -25,7 +25,6 @@ type Localization struct {
 	CreatorID    int64
 	Locale       string
 	LanguageName string
-	Icon         string
 	Status       int64
 	CreatedAt    time.Time
 	UpdatedAt    time.Time
@@ -48,18 +47,19 @@ type Category struct {
 }
 
 type Identifier struct {
-	ID          int64
-	CreatorID   int64
-	CategoryID  int64
-	Name        string
-	Description string
-	ExampleText string
-	Status      int64
-	Platforms   []string
-	NamedList   []string
-	CreatedAt   time.Time
-	UpdatedAt   time.Time
-	Category    *Category
+	ID           int64
+	CreatorID    int64
+	CategoryID   int64
+	Name         string
+	Description  string
+	TextSingular string
+	TextPlural   string
+	Status       int64
+	Platforms    []string
+	NamedList    []string
+	CreatedAt    time.Time
+	UpdatedAt    time.Time
+	Category     *Category
 
 	ParentNames []string
 }
